--- a/Opcion2/style/style02.css
+++ b/Opcion2/style/style02.css
@@ -91,7 +91,9 @@ main {
 }
 
 .text-card p {
-    padding: 30px 30px;
+    width: 150px;
+    margin: auto;
+    padding: 30px 0px 30px 0px;
     line-height: 30px;
 }
 
